k8s/ingress_old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notas-nginx
  namespace: test-dev
spec:
  ingressClassName: nginx
  rules:
  - host: meusite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notas-nginx
            port:
              number: 80
